current decompiler work